<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="16dp"
    >

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/cv"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_holder"
        android:padding="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:id="@+id/local_government_header_textview"
          android:text="@string/local_government_name_text"
          android:layout_alignParentTop="true"
          android:textSize="24sp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/local_government_state_text"
          android:layout_below="@+id/local_government_header_textview"
          android:text="@string/local_government_state_text"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:id="@+id/local_government_state_code_text"
          android:layout_toRightOf="@+id/local_government_state_text"
          android:layout_below="@+id/local_government_header_textview"
          android:text="@string/local_government_state_code_text"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:orientation="vertical"
          android:layout_alignParentRight="true"
          android:layout_marginLeft="20dp"
          android:layout_height="wrap_content"
          tools:ignore="RtlHardcoded">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/local_government_latitude_text_view"
            android:text="@string/local_government_latitude_text"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/local_government_longitude_text_view"
            android:text="@string/local_government_longitude_text"
            android:textSize="18sp"
            />
      </LinearLayout>

    </RelativeLayout>

  </android.support.v7.widget.CardView>

</LinearLayout>